Evolving Losses for Unsupervised Video Representation Learning, CVPR 2020 (1)

--- a/records/Y2020.md
+++ b/records/Y2020.md
@@ -9,6 +9,7 @@ Self-Supervised Learning
 - Shuffle and Learn: Unsupervised Learning using Temporal Order Verification, ECCV 2016 [[paper](https://arxiv.org/pdf/1603.08561.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/ECCV/ECCV_2016/Shuffle%20and%20Learn-%20Unsupervised%20Learning%20using%20Temporal%20Order%20Verification.pdf)] (1)
 - Learning and Using the Arrow of Time, CVPR 2018 [[paper](https://openaccess.thecvf.com/content_cvpr_2018/papers/Wei_Learning_and_Using_CVPR_2018_paper.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CVPR/CVPR_2018/Learning%20and%20Using%20the%20Arrow%20of%20Time.pdf)] (1)
 - Grasp2Vec: Learning Object Representations from Self-Supervised Grasping, CoRL 2018 [[paper](http://proceedings.mlr.press/v87/jang18a/jang18a.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CoRL/CoRL_2018/Grasp2Vec-%20Learning%20Object%20Representations%20from%20Self-Supervised%20Grasping.pdf)] (1)
+- Evolving Losses for Unsupervised Video Representation Learning, CVPR 2020 [[paper](https://openaccess.thecvf.com/content_CVPR_2020/papers/Piergiovanni_Evolving_Losses_for_Unsupervised_Video_Representation_Learning_CVPR_2020_paper.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CVPR/CVPR_2020/Evolving%20Losses%20for%20Unsupervised%20Video%20Representation%20Learning.pdf)] (1)
 ---
 
 2020 Feb
