--- a/records/Y2020.md
+++ b/records/Y2020.md
@@ -3,6 +3,10 @@
 - Hindsight Experience Replay, NIPS 2017 [[paper](https://papers.nips.cc/paper/7090-hindsight-experience-replay.pdf)] [[video](https://sites.google.com/site/hindsightexperiencereplay/)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/NIPS/NIPS_2017/Hindsight%20Experience%20Replay.pdf)] (1)
 
 ---
+Scene Text Recognition
+- Convolutional Character Networks, ICCV 2019 [[paper](https://openaccess.thecvf.com/content_ICCV_2019/papers/Xing_Convolutional_Character_Networks_ICCV_2019_paper.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/ICCV/ICCV_2019/Convolutional%20Character%20Networks.pdf)] (1)
+
+---
 Self-Supervised Learning
 - Unsupervised Visual Representation Learning by Context Prediction, ICCV 2015 [[paper](https://www.cv-foundation.org/openaccess/content_iccv_2015/papers/Doersch_Unsupervised_Visual_Representation_ICCV_2015_paper.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/ICCV/ICCV_2015/Unsupervised%20Visual%20Representation%20Learning%20by%20Context%20Prediction.pdf)] (1)
 - Context Encoders: Feature Learning by Inpainting, CVPR 2016 [[paper](https://www.cv-foundation.org/openaccess/content_cvpr_2016/papers/Pathak_Context_Encoders_Feature_CVPR_2016_paper.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CVPR/CVPR_2016/Context%20Encoders-%20Feature%20Learning%20by%20Inpainting.pdf)] (1)
