--- a/records/Y2020.md
+++ b/records/Y2020.md
@@ -7,6 +7,7 @@ Scene Text Recognition
 - Convolutional Character Networks, ICCV 2019 [[paper](https://openaccess.thecvf.com/content_ICCV_2019/papers/Xing_Convolutional_Character_Networks_ICCV_2019_paper.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/ICCV/ICCV_2019/Convolutional%20Character%20Networks.pdf)] (1)
 - ABCNet: Real-time Scene Text Spotting with Adaptive Bezier-Curve Network, CVPR 2020 [[paper](https://openaccess.thecvf.com/content_CVPR_2020/papers/Liu_ABCNet_Real-Time_Scene_Text_Spotting_With_Adaptive_Bezier-Curve_Network_CVPR_2020_paper.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CVPR/CVPR_2020/ABCNet-%20Real-time%20Scene%20Text%20Spotting%20with%20Adaptive%20Bezier-Curve%20Network.pdf)] (1)
 - Real-time Scene Text Detection with Differentiable Binarization, AAAI 2020 [[paper](https://aaai.org/Papers/AAAI/2020GB/AAAI-LiaoM.578.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/AAAI/AAAI_2020/Real-time%20Scene%20Text%20Detection%20with%20Differentiable%20Binarization.pdf)] (1)
+- TextField: Learning A Deep Direction Field for Irregular Scene Text Detection, TIP 2019 [[paper](https://arxiv.org/pdf/1812.01393.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/TIP/TIP_2019/TextField-%20Learning%20A%20Deep%20Direction%20Field%20for%20Irregular%20Scene%20Text%20Detection.pdf)] (1)
 
 ---
 Self-Supervised Learning
