--- a/records/Y2020.md
+++ b/records/Y2020.md
@@ -6,6 +6,7 @@
 Visual SLAM
 - ORB-SLAM: a Versatile and Accurate Monocular SLAM System, T-RO 2015 [[paper](https://arxiv.org/pdf/1502.00956.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/journels/T-RO/T-RO_2015/ORB-SLAM-%20a%20Versatile%20and%20Accurate%20Monocular%20SLAM%20System.pdf)] (1)
 - DTAM: Dense Tracking and Mapping in Real-Time, ICCV 2011 [[paper](https://www.doc.ic.ac.uk/~ajd/Publications/newcombe_etal_iccv2011.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/ICCV/ICCV_2011/DTAM-%20Dense%20Tracking%20and%20Mapping%20in%20Real-Time.pdf)] (1)
+- Learning Meshes for Dense Visual SLAM, ICCV 2019 [[paper](https://openaccess.thecvf.com/content_ICCV_2019/papers/Bloesch_Learning_Meshes_for_Dense_Visual_SLAM_ICCV_2019_paper.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/ICCV/ICCV_2019/Learning%20Meshes%20for%20Dense%20Visual%20SLAM.pdf)] (1)
 
 ---
 Scene Text Recognition
