Wasserstein GAN, ICML 2017 (1)

--- a/records/Y2020.md
+++ b/records/Y2020.md
@@ -3,6 +3,10 @@
 - Hindsight Experience Replay, NIPS 2017 [[paper](https://papers.nips.cc/paper/7090-hindsight-experience-replay.pdf)] [[video](https://sites.google.com/site/hindsightexperiencereplay/)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/NIPS/NIPS_2017/Hindsight%20Experience%20Replay.pdf)] (1)
 
 ---
+Optimal Transport
+- Wasserstein GAN, ICML 2017 [[paper](https://arxiv.org/pdf/1701.07875.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/ICML/ICML_2017/Wasserstein%20GAN.pdf)] (1)
+
+---
 Visual SLAM
 - ORB-SLAM: a Versatile and Accurate Monocular SLAM System, T-RO 2015 [[paper](https://arxiv.org/pdf/1502.00956.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/journels/T-RO/T-RO_2015/ORB-SLAM-%20a%20Versatile%20and%20Accurate%20Monocular%20SLAM%20System.pdf)] (1)
 - DTAM: Dense Tracking and Mapping in Real-Time, ICCV 2011 [[paper](https://www.doc.ic.ac.uk/~ajd/Publications/newcombe_etal_iccv2011.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/ICCV/ICCV_2011/DTAM-%20Dense%20Tracking%20and%20Mapping%20in%20Real-Time.pdf)] (1)
