Spectral Normalization for Generative Adversarial Networks, ICLR 2018 (1)

--- a/records/Y2020.md
+++ b/records/Y2020.md
@@ -6,6 +6,7 @@
 Optimal Transport
 - Wasserstein GAN, ICML 2017 [[paper](https://arxiv.org/pdf/1701.07875.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/ICML/ICML_2017/Wasserstein%20GAN.pdf)] (1)
 - Improved Training of Wasserstein GANs, NeurIPS 2018 [[paper](https://arxiv.org/pdf/1704.00028.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/NIPS/NeurIPS_2018/Improved%20Training%20of%20Wasserstein%20GANs.pdf)] (1)
+- Spectral Normalization for Generative Adversarial Networks, ICLR 2018 [[paper](https://arxiv.org/pdf/1802.05957.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/ICLR/ICLR_2018/Spectral%20Normalization%20for%20Generative%20Adversarial%20Networks.pdf)] (1)
 
 ---
 Visual SLAM
