Glow: Generative Flow with Invertible 1×1 Convolutions, NeurIPS 2018 (1)

--- a/records/Y2020.md
+++ b/records/Y2020.md
@@ -3,6 +3,10 @@
 - Hindsight Experience Replay, NIPS 2017 [[paper](https://papers.nips.cc/paper/7090-hindsight-experience-replay.pdf)] [[video](https://sites.google.com/site/hindsightexperiencereplay/)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/NIPS/NIPS_2017/Hindsight%20Experience%20Replay.pdf)] (1)
 
 ---
+Flow Models
+- Glow: Generative Flow with Invertible 1×1 Convolutions, NeurIPS 2018 [[paper](https://arxiv.org/pdf/1807.03039.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/NIPS/NeurIPS_2018/Glow-%20Generative%20Flow%20with%20Invertible%201%C3%971%20Convolutions.pdf)] (1)
+
+---
 Optimal Transport
 - Wasserstein GAN, ICML 2017 [[paper](https://arxiv.org/pdf/1701.07875.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/ICML/ICML_2017/Wasserstein%20GAN.pdf)] (1)
 - Improved Training of Wasserstein GANs, NeurIPS 2018 [[paper](https://arxiv.org/pdf/1704.00028.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/NIPS/NeurIPS_2018/Improved%20Training%20of%20Wasserstein%20GANs.pdf)] (1)
