--- a/records/Y2020.md
+++ b/records/Y2020.md
@@ -8,6 +8,7 @@ Flow Models
 - C-Flow: Conditional Generative Flow Models for Images and 3D Point Clouds, CVPR 2020 [[paper](https://openaccess.thecvf.com/content_CVPR_2020/papers/Pumarola_C-Flow_Conditional_Generative_Flow_Models_for_Images_and_3D_Point_CVPR_2020_paper.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CVPR/CVPR_2020/C-Flow-%20Conditional%20Generative%20Flow%20Models%20for%20Images%20and%203D%20Point%20Clouds.pdf)] (1)
 - Implicit Generation and Modeling with Energy-Based Models, NeurIPS 2019 [[paper](https://arxiv.org/pdf/1903.08689.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/NIPS/NeurIPS_2019/Implicit%20Generation%20and%20Modeling%20with%20Energy-Based%20Models.pdf)] (1)
 - Your Classifier Is Secretly an Energy Based Model and You Should Treat It Like One, ICLR 2020 [[paper](https://openreview.net/pdf?id=Hkxzx0NtDB)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/ICLR/ICLR_2020/Your%20Classifier%20Is%20Secretly%20an%20Energy%20Based%20Model%20and%20You%20Should%20Treat%20It%20Like%20One.pdf)] (1)
+- Do Deep Generative Models Know What They Don't Know?, ICLR 2019 [[paper](https://openreview.net/pdf?id=H1xwNhCcYm)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/ICLR/ICLR_2019/Do%20Deep%20Generative%20Models%20Know%20What%20They%20Don't%20Know%3F.pdf)] (1)
 
 ---
 Optimal Transport
