--- a/records/Y2020.md
+++ b/records/Y2020.md
@@ -3,6 +3,10 @@
 - Hindsight Experience Replay, NIPS 2017 [[paper](https://papers.nips.cc/paper/7090-hindsight-experience-replay.pdf)] [[video](https://sites.google.com/site/hindsightexperiencereplay/)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/NIPS/NIPS_2017/Hindsight%20Experience%20Replay.pdf)] (1)
 
 ---
+Neural Architecture Search
+- Neural Architecture Search with Reinforcement Learning, ICLR 2017 [[paper](https://openreview.net/pdf?id=r1Ue8Hcxg)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/ICLR/ICLR_2017/Neural%20Architecture%20Search%20with%20Reinforcement%20Learning.pdf)] (1)
+
+---
 Flow Models
 - Glow: Generative Flow with Invertible 1×1 Convolutions, NeurIPS 2018 [[paper](https://arxiv.org/pdf/1807.03039.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/NIPS/NeurIPS_2018/Glow-%20Generative%20Flow%20with%20Invertible%201%C3%971%20Convolutions.pdf)] (1)
 - C-Flow: Conditional Generative Flow Models for Images and 3D Point Clouds, CVPR 2020 [[paper](https://openaccess.thecvf.com/content_CVPR_2020/papers/Pumarola_C-Flow_Conditional_Generative_Flow_Models_for_Images_and_3D_Point_CVPR_2020_paper.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CVPR/CVPR_2020/C-Flow-%20Conditional%20Generative%20Flow%20Models%20for%20Images%20and%203D%20Point%20Clouds.pdf)] (1)
