--- a/records/Y2020.md
+++ b/records/Y2020.md
@@ -7,6 +7,7 @@ Neural Architecture Search
 - Neural Architecture Search with Reinforcement Learning, ICLR 2017 [[paper](https://openreview.net/pdf?id=r1Ue8Hcxg)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/ICLR/ICLR_2017/Neural%20Architecture%20Search%20with%20Reinforcement%20Learning.pdf)] (1)
 - DARTS: Differentiable Architecture Search, ICLR 2019 [[paper](https://openreview.net/pdf?id=S1eYHoC5FX)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/ICLR/ICLR_2019/DARTS-%20Differentiable%20Architecture%20Search.pdf)] (1)
 - EfficientNet: Rethinking Model Scaling for Convolutional Neural Networks, ICML 2019 [[paper](https://arxiv.org/pdf/1905.11946.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/ICML/ICML_2019/EfficientNet-%20Rethinking%20Model%20Scaling%20for%20Convolutional%20Neural%20Networks.pdf)] (1)
+- Exploring Randomly Wired Neural Networks for Image Recognition, ICCV 2019 [[paper](https://openaccess.thecvf.com/content_ICCV_2019/papers/Xie_Exploring_Randomly_Wired_Neural_Networks_for_Image_Recognition_ICCV_2019_paper.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/ICCV/ICCV_2019/Exploring%20Randomly%20Wired%20Neural%20Networks%20for%20Image%20Recognition.pdf)] (1)
 
 ---
 Flow Models
