GCAN: Graph Convolutional Adversarial Network for Unsupervised Domain Adaptation, CVPR 2019 (1)

--- a/records/Y2020.md
+++ b/records/Y2020.md
@@ -1,6 +1,10 @@
-2020 Mar
+2020 May
 
-- Hindsight Experience Replay, NIPS 2017 [[paper](https://papers.nips.cc/paper/7090-hindsight-experience-replay.pdf)] [[video](https://sites.google.com/site/hindsightexperiencereplay/)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/NIPS/NIPS_2017/Hindsight%20Experience%20Replay.pdf)] (1)
+---
+Graph Neural Network
+- GCAN: Graph Convolutional Adversarial Network for Unsupervised Domain Adaptation, CVPR 2019 [[paper](https://openaccess.thecvf.com/content_CVPR_2019/papers/Ma_GCAN_Graph_Convolutional_Adversarial_Network_for_Unsupervised_Domain_Adaptation_CVPR_2019_paper.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CVPR/CVPR_2019/GCAN-%20Graph%20Convolutional%20Adversarial%20Network%20for%20Unsupervised%20Domain%20Adaptation.pdf)] (1)
+
+2020 Apr
 
 ---
 Neural Architecture Search
@@ -36,6 +40,10 @@ Scene Text Recognition
 - ABCNet: Real-time Scene Text Spotting with Adaptive Bezier-Curve Network, CVPR 2020 [[paper](https://openaccess.thecvf.com/content_CVPR_2020/papers/Liu_ABCNet_Real-Time_Scene_Text_Spotting_With_Adaptive_Bezier-Curve_Network_CVPR_2020_paper.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CVPR/CVPR_2020/ABCNet-%20Real-time%20Scene%20Text%20Spotting%20with%20Adaptive%20Bezier-Curve%20Network.pdf)] (1)
 - Real-time Scene Text Detection with Differentiable Binarization, AAAI 2020 [[paper](https://aaai.org/Papers/AAAI/2020GB/AAAI-LiaoM.578.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/AAAI/AAAI_2020/Real-time%20Scene%20Text%20Detection%20with%20Differentiable%20Binarization.pdf)] (1)
 - TextField: Learning A Deep Direction Field for Irregular Scene Text Detection, TIP 2019 [[paper](https://arxiv.org/pdf/1812.01393.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/TIP/TIP_2019/TextField-%20Learning%20A%20Deep%20Direction%20Field%20for%20Irregular%20Scene%20Text%20Detection.pdf)] (1)
+
+2020 Mar
+
+- Hindsight Experience Replay, NIPS 2017 [[paper](https://papers.nips.cc/paper/7090-hindsight-experience-replay.pdf)] [[video](https://sites.google.com/site/hindsightexperiencereplay/)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/NIPS/NIPS_2017/Hindsight%20Experience%20Replay.pdf)] (1)
 
 ---
 Self-Supervised Learning
