Symmetric Graph Convolutional Autoencoder for Unsupervised Graph Representation Learning, ICCV 2019 (1)

--- a/records/Y2020.md
+++ b/records/Y2020.md
@@ -3,6 +3,7 @@
 ---
 Graph Neural Network
 - GCAN: Graph Convolutional Adversarial Network for Unsupervised Domain Adaptation, CVPR 2019 [[paper](https://openaccess.thecvf.com/content_CVPR_2019/papers/Ma_GCAN_Graph_Convolutional_Adversarial_Network_for_Unsupervised_Domain_Adaptation_CVPR_2019_paper.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CVPR/CVPR_2019/GCAN-%20Graph%20Convolutional%20Adversarial%20Network%20for%20Unsupervised%20Domain%20Adaptation.pdf)] (1)
+- Symmetric Graph Convolutional Autoencoder for Unsupervised Graph Representation Learning, ICCV 2019 [[paper](https://openaccess.thecvf.com/content_ICCV_2019/papers/Park_Symmetric_Graph_Convolutional_Autoencoder_for_Unsupervised_Graph_Representation_Learning_ICCV_2019_paper.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/ICCV/ICCV_2019/Symmetric%20Graph%20Convolutional%20Autoencoder%20for%20Unsupervised%20Graph%20Representation%20Learning.pdf)] (1)
 
 2020 Apr
 
