--- a/records/Y2020.md
+++ b/records/Y2020.md
@@ -5,6 +5,7 @@ Graph Neural Network
 - GCAN: Graph Convolutional Adversarial Network for Unsupervised Domain Adaptation, CVPR 2019 [[paper](https://openaccess.thecvf.com/content_CVPR_2019/papers/Ma_GCAN_Graph_Convolutional_Adversarial_Network_for_Unsupervised_Domain_Adaptation_CVPR_2019_paper.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CVPR/CVPR_2019/GCAN-%20Graph%20Convolutional%20Adversarial%20Network%20for%20Unsupervised%20Domain%20Adaptation.pdf)] (1)
 - Symmetric Graph Convolutional Autoencoder for Unsupervised Graph Representation Learning, ICCV 2019 [[paper](https://openaccess.thecvf.com/content_ICCV_2019/papers/Park_Symmetric_Graph_Convolutional_Autoencoder_for_Unsupervised_Graph_Representation_Learning_ICCV_2019_paper.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/ICCV/ICCV_2019/Symmetric%20Graph%20Convolutional%20Autoencoder%20for%20Unsupervised%20Graph%20Representation%20Learning.pdf)] (1)
 - Semantic Graph Convolutional Networks for 3D Human Pose Regression, CVPR 2019 [[paper](https://openaccess.thecvf.com/content_CVPR_2019/papers/Zhao_Semantic_Graph_Convolutional_Networks_for_3D_Human_Pose_Regression_CVPR_2019_paper.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CVPR/CVPR_2019/Semantic%20Graph%20Convolutional%20Networks%20for%203D%20Human%20Pose%20Regression.pdf)] (1)
+- A Convex Relaxation for Multi-Graph Matching, CVPR 2019 [[paper](https://openaccess.thecvf.com/content_CVPR_2019/papers/Swoboda_A_Convex_Relaxation_for_Multi-Graph_Matching_CVPR_2019_paper.pdf)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CVPR/CVPR_2019/A%20Convex%20Relaxation%20for%20Multi-Graph%20Matching.pdf)] (1)
 
 2020 Apr
 
