A Visual Guide to Evolution Strategies 2019 (1)

--- a/records/Y2020.md
+++ b/records/Y2020.md
@@ -1,3 +1,6 @@
+2020 Jul
+- A Visual Guide to Evolution Strategies 2019 [[blog](https://blog.otoro.net/2017/10/29/visual-evolution-strategies/)] (1)
+
 2020 May
 
 ---
