Unsupervised Intra-domain Adaptation for Semantic Segmentation through Self-Supervision, CVPR 2020 (1)

--- a/records/Y2020.md
+++ b/records/Y2020.md
@@ -1,4 +1,5 @@
 2020 Jul
+- Unsupervised Intra-domain Adaptation for Semantic Segmentation through Self-Supervision, CVPR 2020 [[paper](https://openaccess.thecvf.com/content_CVPR_2020/papers/Pan_Unsupervised_Intra-Domain_Adaptation_for_Semantic_Segmentation_Through_Self-Supervision_CVPR_2020_paper.pdf)] [[blog](https://feipan664.github.io/IntraDA/)] [[video](https://www.youtube.com/watch?v=x1KLka4iQlo&feature=youtu.be)] [[code](https://github.com/feipan664/IntraDA)] [[my repo](https://github.com/BryanBo-Cao/papers/blob/master/confs/CVPR/CVPR_2020/Unsupervised%20Intra-domain%20Adaptation%20for%20Semantic%20Segmentation%20through%20Self-Supervision.pdf)] (1)
 - A Visual Guide to Evolution Strategies 2019 [[blog](https://blog.otoro.net/2017/10/29/visual-evolution-strategies/)] (2)
 
 2020 May
